src/python.240165.0.error
  File "content_training.py", line 138
    output = open('/workspace/ling573_sp_2016/nickmon_calderma_kwlabuda/test_for_rouge/D3/' + doc_id,'w')
    ^
IndentationError: unexpected indent
